fix: image covering the entire right side of the screen

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ input[type="checkbox"]:checked {
 #img-lateral {
     background: url(./assets/side-image.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
     width: 50%;
     position: absolute;
     right: 0px;
